--- a/style/style.css
+++ b/style/style.css
@@ -62,3 +62,56 @@ margin-bottom: 15px;
    width:  172px;
    height: 62px;
 }
+#kontakt .project-list{
+    display: flex;
+    align-items: center;
+}
+#kontakt h3{
+    text-align: center;
+    font-size: 24px;
+    width:  255px;
+    height: 72px;
+}
+#kontakt .color{
+    color: #9999;
+    height: 29px;
+}
+#kontakt .table{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 350px;
+    height: 250px;
+    margin-bottom:50px ;
+}
+#kontakt .table .num{
+width: 190px;
+}
+#kontakt .min .mail{
+    color: #F7654A;
+    font-size: 24px;
+    height: 36px;
+}
+#kontakt .table .time{
+    width:  255px;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#kontakt .min {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 350px;
+    margin-bottom:85px ;
+}
+#kontakt .min img{
+    width: 50px;
+    height: 40px;
+}
+#kontakt .min .color{
+    padding-top:36px ;
+    padding-bottom: 25px;
+}
